add user swagger
